updated gui again

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -128,8 +128,8 @@ font-style: normal;
 font-weight: bold;
 font-size: 24px;
 font-family: &quot;Garamond&quot;;
-border-style: dotted;
-border-width: 3px;
+border-style: none;
+border-width: 0px;
 margin: 0px 0px 0px 0px;
 padding: 12px 18px 12px 6px;
 text-align: left;
